<resources>
    <string name="app_name">Divercity</string>
    <string name="divercity">Divercity</string>
    <string name="retry">Retry</string>
    <string name="ok">Ok</string>
    <string name="notification">Notifications</string>
    <string name="group">Group</string>
    <string name="empty">Empty</string>
    <string name="search">Search</string>
    <string name="jobs">Jobs</string>
    <string name="ups">Ups!</string>
    <string name="no_results">No results</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="contact">Contact</string>
    <string name="desc">desc</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="_continue">Continue</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="conversation">Conversation</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="connections">Connections</string>
    <string name="connection">Connection</string>
    <string name="pick_source">Pick source</string>
    <string name="error_notifications">Error setting up notifications, try to restart the app</string>
    <string name="invitations">Invitations</string>
    <string name="invite">Invite</string>
    <string name="invite_users">Invite Users</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_friends_subtitle">Your group is better with friends</string>
    <string name="not_now">Not Now</string>
    <string name="maybe_later">Maybe later</string>
    <string name="no_notifications">You have no activity yet; post or respond/react to a question or comment so we can get this show on the road</string>
    <string name="no_requests_yet">No Requests Yet</string>
    <string name="me">Me</string>
    <string name="add">ADD</string>
    <string name="update">Update</string>
    <string name="search_company">Please, search to show results</string>
    <string name="change_photo">Change Photo</string>
    <string name="start_new_conversation">Start a new conversation</string>
    <string name="select_at_least_one">Select at least one</string>
    <string name="submit">Submit</string>
    <string name="see_all">See All ></string>
    <string name="reset">Reset</string>
    <string name="search_picture_online">Search Pictures Online</string>
    <string name="race_ethnicity">Race/Ethnicity</string>
    <string name="age">Age</string>
    <string name="sexual_orientation">Sexual Orientation</string>
    <string name="able_bodiedness">Able-bodiedness</string>
    <string name="personal">Personal</string>
    <string name="interests">Interests</string>
    <string name="gender">Gender</string>
    <string name="school">School</string>
    <string name="degree">Degree</string>
    <string name="ethnicity">Ethnicity</string>
    <string-array name="age_range">
        <item>13 – 17</item>
        <item>18 – 24</item>
        <item>25 – 34</item>
        <item>35 – 44</item>
        <item>45 – 54</item>
        <item>55 – 64</item>
        <item>65+</item>
    </string-array>
    <string name="occupation">Occupation</string>
    <string name="no_followers">You don’t seem to have any Followers yet :(</string>
    <string name="no_following">You don’t seem to be Following anyone yet :(</string>
    <string name="no_groups_following">You haven’t joined any Group yet :(</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="account">Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="lbl_name_email">Name, Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_job_status">Change Job Status</string>
    <string name="app">App</string>
    <string name="notifications">Notifications</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="experience_education">Experience &amp; Education</string>
    <string name="personal_settings_subtitle">Ethnicity, Gender, Occupation, Location…</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="view_resume">View Resume</string>
    <string name="connection_requests">Connection Requests</string>
    <string name="requests">Requests</string>
    <string name="upload_your_resume">Upload your resume</string>
    <string name="upload_resume_prompt">Profiles with resumes have a higher response rate from recruiters.</string>
    <string name="upload_a_resume">Upload a resume</string>
    <string name="add_your_experience">Add your experience</string>
    <string name="add_a_skill">Add a Skill</string>
    <string name="add_your_skills">Add your skills</string>
    <string name="add_your_education">Add your education</string>
    <string name="view_groups">View Groups</string>
    <string name="view_interests">View Interests</string>
    <string name="view_companies">View Companies</string>
    <string name="edit_interests">Edit Interests</string>
    <string name="add_work_experience">Add Work Experience</string>
    <string name="edit_work_experience">Edit Work Experience</string>
    <string name="add_education">Add Education</string>
    <string name="edit_education">Edit Education</string>
    <string name="plus_add_work_experience">+ Add Work Experience</string>
    <string name="plus_add_education">+ Add Education</string>
    <string name="work_experience">Work Experience</string>
    <string name="current_no_connections">You don’t seem to have any Connections yet :(</string>
    <string name="other_no_connections">This user doesn\'t seem to have any Connections yet :(</string>
    <string name="reset_password">Reset Password</string>
    <string name="major">Major</string>
    <string name="create_new_company">Create New Company</string>
    <string name="company_name">Company Name</string>
    <string name="company_size">Company Size</string>
    <string name="industry">Industry</string>
    <string name="company_description">Company Description</string>
    <string name="company_successfully_created">Company successfully created</string>
    <string name="select_industry">Select Industry</string>
    <string name="select_company_size">Select Company Size</string>
    <string name="companies">Companies</string>
    <string name="my_companies">My Companies</string>
    <string name="othe_companies">Other Companies</string>
    <string name="no_created_company">You don\'t have any created company</string>
    <string name="no_employee">This company doesn\'t have any employee yet</string>
    <string name="no_review">This company doesn\'t have any review yet</string>
    <string name="report_company">Report Company</string>
    <string name="edit_admins">Edit Admins</string>
    <string name="company_no_description">This company hasn\'t added description yet</string>
    <string name="company_no_jobs">This company hasn\'t had any job posting</string>
    <string name="company">Company</string>
    <string name="rate_company">Rate Company</string>
    <string name="edit_rate">Edit Rate</string>
    <string name="employee_diversity_reviews">Employee Diversity Reviews</string>
    <string name="ratings">Ratings</string>
    <string name="review">Review</string>
    <string name="leave_review_warning">Writing a review helps other users learn more. Are you sure you want to submit?</string>
    <string name="rate_company_diversity">Rate Company\'s Diversity</string>
    <string name="rate_company_label">How Diverse-minded and Inclusive is %1$s in your humble opinion?</string>
    <string name="submit_diversity_rating">Submit Diversity Rating</string>
    <string name="use_my_location">Use My Location</string>
    <string name="select_valid_file">Select valid file</string>
    <string name="file_upload_success">File uploaded successfully</string>
    <string name="created_at">Created at %1$s</string>
    <string name="last_used_at">Last used at %1$s</string>
    <string name="select_your_company">What company do you work for currently?</string>
    <string name="select_your_industry">Select your Industry</string>
    <string name="select_your_major">Select your Major</string>
    <string name="select_your_ooi">Select your Occupation of Interests</string>
    <string name="select_your_location">Select your Location</string>
    <string name="select_your_ethnicity">Select your Ethnicity</string>
    <string name="select_your_occupation">Select your Occupation</string>
    <string name="select_your_gender">Select your Gender</string>
    <string name="select_your_skills">Select your Skills</string>
    <string name="select_your_interests">Select 3 or more Areas of Interests</string>
    <string name="select_your_agerange">Select your Age Range</string>
    <string name="select_your_school">Select your School</string>
    <string name="select_group">Choose some groups you would like to join</string>
    <string name="profile_prompt_title">Let\'s Set Up For Success</string>
    <string name="profile_prompt_subtitle_recruiter">%1$s, for the best experience, please tell us a little about yourself and your interests so we can customize your group, connection, or candidate suggestions.</string>
    <string name="profile_prompt_subtitle_nonrecruiter">%1$s, for the best experience, please tell us a little about yourself and your interests so we can customize your group, connection, or job suggestions.</string>
    <string name="professional_job_seeker">Professional/Job Seeker</string>
    <string name="student">Student</string>
    <string name="entrepreneur">Entrepreneur</string>
    <string name="professional">Professional</string>
    <string name="hiring_manager_recruiter">Hiring Manager/Recruiter</string>
    <string name="recruiter">Recruiter</string>
    <string name="professional_job_seeker_id">job_seeker</string>
    <string name="student_id">student</string>
    <string name="entrepreneur_id">entrepreneur</string>
    <string name="professional_id">professional</string>
    <string name="hiring_manager_recruiter_id">hiring_manager</string>
    <string name="recruiter_id">recruiter</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non-Binary</string>
    <string name="groups">Groups</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="job_board">Job Board</string>
    <string name="create_group">Create a New Group</string>
    <string name="job_posted_succesfully">Your Job was Successfully Posted!</string>
    <string name="job_posted_subtitle">How about letting some of your Friends or Groups know about the Job Posting you just created?</string>
    <string name="share_friends">Share to Friends</string>
    <string name="share_groups">Share to Groups</string>
    <string name="share_via_message">Share via Message</string>
    <string name="report_job_posting">Report Job Posting</string>
    <string name="edit_job_posting">Edit Job Posting</string>
    <string name="unpublish_job">Unpublish Job Posting</string>
    <string name="delete_job_posting">Delete Job Posting</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_photo">Add Photo</string>
    <string name="write_new_post">Write a New Post</string>
    <string name="edit_group">Edit Group</string>
    <string name="add_admin">Add Admin</string>
    <string name="view_members">View Members</string>
    <string name="edit_members">Edit Members</string>
    <string name="invite_from_divercity">Invite From Divercity</string>
    <string name="invite_from_contact_list">Invite From Contact List</string>
    <string name="delete_group">Delete Group</string>
</resources>