<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_backgrd_round1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_share_via_message"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/share_via_message" />

    <TextView
        android:id="@+id/btn_share_to_groups"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/share_groups" />

    <TextView
        android:id="@+id/btn_report_company"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/report_company" />

    <TextView
        android:id="@+id/btn_add_admins"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_admin" />

    <TextView
        android:id="@+id/btn_edit_admins"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/edit_admins" />

</LinearLayout>