<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape_backgrd_round1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_invite"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/invite_users" />

    <TextView
        android:id="@+id/btn_edit_group"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/edit_group" />

    <TextView
        android:id="@+id/btn_add_admin"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_admin" />

    <TextView
        android:id="@+id/btn_edit_admin"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/edit_admins" />

    <TextView
        android:id="@+id/btn_edit_members"
        style="@style/AppText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/edit_members" />

</LinearLayout>