<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_backgrd_round1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_group"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_checkmark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/avenir_heavy"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:text="@string/invite_friends"
        android:textColor="@color/grey2"
        android:textSize="20sp" />

    <TextView
        style="@style/AppText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/avenir_book"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:text="@string/invite_friends_subtitle" />

    <Button
        android:id="@+id/btn_invite_divercity"
        style="@style/AppText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/shape_backgrd_round_blue2"
        android:fontFamily="@font/avenir_medium"
        android:padding="18dp"
        android:text="@string/invite_from_divercity"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_invite_contact"
        style="@style/AppText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_backgrd_round_blue2"
        android:fontFamily="@font/avenir_medium"
        android:padding="18dp"
        android:text="@string/invite_from_contact_list"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        style="@style/AppText2"
        android:id="@+id/btn_not_now"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="@font/avenir_book"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:text="@string/not_now" />

</LinearLayout>