<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_backgrd_round"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_check_mark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/avenir_heavy"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:text="@string/job_posted_succesfully"
        android:textColor="@color/grey2"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenir_book"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:text="@string/job_posted_subtitle"
        android:textColor="@color/grey3"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_share_to_friends"
        style="@style/AppText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/shape_backgrd_round_blue2"
        android:fontFamily="@font/avenir_medium"
        android:padding="18dp"
        android:text="@string/share_friends"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_share_to_groups"
        style="@style/AppText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/shape_backgrd_round_blue2"
        android:fontFamily="@font/avenir_medium"
        android:padding="18dp"
        android:text="@string/share_groups"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>